# dbf-core

./: .cvsignore  AUTHORS  BUGS  CREDITS  ChangeLog  FAQ  Makefile.am  Makefile.rules  NEWS  README  autogen.sh  configure.in  dbf.spec.in
debian/: changelog  control  copyright  docs  rules
man/: .cvsignore  Makefile.am  dbf.sgml
po/: .cvsignore  POTFILES.in  de.po
src/: .cvsignore  Makefile.am  csv.c  csv.h  dbf.c  dbf.dsp  dbf.dsw  dbf.h  odbf.c  odbf.h  sql.c  sql.h  statistic.c  statistic.h
